  and API updates have been a little more frequent lately. They are documented below and in imgui.cpp and should not affect all users.
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 1.92.6 WIP (In Progress)
-----------------------------------------------------------------------

Breaking Changes:

- Hashing: handling of "###" operator to reset to seed within a string identifier
  doesn't include the "###" characters in the output hash anymore:
      Before: GetID("Hello###World") == GetID("###World") != GetID("World");
      Now:    GetID("Hello###World") == GetID("###World") == GetID("World");
  - This has the property of facilitating concatenating and manipulating
    identifiers using "###", and will allow fixing other dangling issues.
  - This will invalidate hashes (stored in .ini data) for Tables and Windows
    that are using the "###" operators. (#713, #1698)
- Renamed helper macro IM_ARRAYSIZE() -> IM_COUNTOF(). Kept redirection/legacy name.
- Fonts:
  - AddFontDefault() now automatically selects an embedded font between:
    - AddFontDefaultVector(): new scalable font. Recommended at any higher size.
    - AddFontDefaultBitmap(): classic pixel-clean font. Recommended at Size 13px with no scaling.
    - The default selection is based on (style.FontSizeBase * FontScaleMain * FontScaleDpi)
      reaching a small threshold. Prefer calling either based on your own logic.
      And you can call AddFontDefaultBitmap() to ensure legacy behavior.
  - Fixed handling of `ImFontConfig::FontDataOwnedByAtlas = false` which
    did erroneously make a copy of the font data, essentially defeating the purpose
    of this flag and wasting memory (undetected since July 2015 and now spotted
    by @TellowKrinkle, this is perhaps the oldest bug in Dear ImGui history,
    albeit for a rarely used feature!) (#9086, #8465)
    HOWEVER, fixing this bug is likely to surface bugs in user/app code: